# DE-showcase

./: .gitignore  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile.devcontainer  devcontainer.json  docker-compose.devcontainer.yaml
models/: manage.py
models/src/: asgi.py  settings.py  urls.py  wsgi.py
models/src/example/: admin.py  apps.py  models.py  serializers.py  views.py
models/src/example/migrations/: 0001_initial.py
models/src/utils/: basemodel.py
